# debate-ia-agent

./: .gitignore  LICENSE  README.md  agents-meeting.example.yaml  agents-meeting.yaml  install.sh  pyproject.toml
samples/: agents-branding.yaml  agents-code.yaml  agents-meeting.yaml  agents-products.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  agent.py  debate.py
src/agents_meeting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: __init__.py  models.py
src/providers/: __init__.py  anthropic.py  base.py  custom.py  gemini.py  lmstudio.py  ollama.py  openai.py
src/tui/: __init__.py  app.py
